tests/fixtures/validate/lenient/invalid/invalid-section-jump-1.yini
^ App
title = "My App"

^^^ Advanced   // ERROR: invalid section jump, level 2 is missing

debug = true
